--- a/packages/admin-dashboard/src/locales/pl/customers.json
+++ b/packages/admin-dashboard/src/locales/pl/customers.json
@@ -26,7 +26,7 @@
         "addBtn": "Dodaj adres",
         "phoneNumberShort": "tel.{{value}}",
         "edit": "Edytuj",
-        "save": "Zapisz",
+        "save": "Zapisywanie",
         "cancel": "Anuluj"
     },
     "orders": {
@@ -81,23 +81,23 @@
         "isDefaultBilling": "Domyślny adres wysyłki klienta",
         "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
         "createForCustomer": "Utwórz dla klienta",
-        "inputNameLabel": "Pełna nazwa",
-        "inputNamePlaceholder": "Imię i nazwisko",
+        "inputNameLabel": "Full Name",
+        "inputNamePlaceholder": "Full Name",
         "inputCompanyLabel": "Nazwa firmy",
-        "inputCompanyPlaceholder": "Nazwa firmy",
-        "inputPhoneLabel": "Numer telefonu",
-        "inputPhonePlaceholder": "Numer telefonu",
-        "inputPostalLabel": "Kod pocztowy",
-        "inputPostalPlaceholder": "Kod pocztowy",
-        "inputProvinceLabel": "Prowincja",
-        "inputProvincePlaceholder": "Prowincja",
-        "inputCityLabel": "Miasto",
-        "inputCityPlaceholder": "Miasto",
-        "inputStreetLabel": "Ulica Linia 1",
+        "inputCompanyPlaceholder": "Company Name",
+        "inputPhoneLabel": "Phone Number",
+        "inputPhonePlaceholder": "Phone Number",
+        "inputPostalLabel": "Postal Code",
+        "inputPostalPlaceholder": "Postal Code",
+        "inputProvinceLabel": "Province",
+        "inputProvincePlaceholder": "Province",
+        "inputCityLabel": "City",
+        "inputCityPlaceholder": "City",
+        "inputStreetLabel": "Street Line 1",
         "inputStreetPlaceholder": "Street Line 1",
-        "inputStreet2Label": "Ulica Linia 2",
+        "inputStreet2Label": "Street Line 2",
         "inputStreet2Placeholder": "Street Line 2",
         "inputTaxLabel": "Identyfikator podatkowy firmy",
-        "inputTaxPlaceholder": "Identyfikator podatkowy firmy"
+        "inputTaxPlaceholder": "Company Tax ID"
     }
 }
