--- a/packages/admin-dashboard/src/locales/pl/orders.json
+++ b/packages/admin-dashboard/src/locales/pl/orders.json
@@ -16,12 +16,12 @@
     "copied": "Tekst skopiowany do schowka",
     "noFilterField": "Brak",
     "columns": "Kolumny",
-    "deleteOrCancel": "Usuń/Anuluj wybrane",
-    "selectedValue": "wybrano {{from}} z {{to}} wierszy",
+    "deleteOrCancel": "Usuń/Anuluj zaznaczone",
+    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
     "discountByValue": "Zniżka {{value}}",
     "deleteDraft": {
         "button": "Usuń wersję roboczą",
-        "title": "Czy na pewno?",
+        "title": "Jesteś pewien?",
         "descriptionDraft": "Następujące wersje robocze poleceń zostaną trwale usunięte:",
         "descriptionOrder": "Następujące zamówienia zostaną anulowane:",
         "confirm": "Usuń wersję roboczą",
@@ -64,7 +64,7 @@
         "viewPayment": "Wyświetlanie szczegółów płatności",
         "viewOrder": "Wyświetl zamówienie",
         "paymentMethod": "Typ płatności",
-        "phoneNumber": "Numer telefonu",
+        "phoneNumber": "Phone Number",
         "type": "Typ",
         "totalWithTax": "Razem z podatkiem",
         "realization": "Realizacja"
@@ -76,7 +76,7 @@
             "discount": "Rabat do sumy w {{value}}",
             "discountAmount": "Kwota rabatu",
             "quantity": "Ilość",
-            "quantityPlaceholder": "Ilość"
+            "quantityPlaceholder": "Quantity"
         },
         "baseInfoCode": "Kod: {{value}}",
         "realizationPlan": "Planowana realizacja: {{value}}",
@@ -94,7 +94,7 @@
         "completeOrderButton": "Kompletna kolejność draftu",
         "addTitle": "Dodaj pozycję do projektu zamówienia",
         "viewTitle": "Pozycje w kolejności",
-        "editTitle": "Pozycje w kolejności",
+        "editTitle": "Items in order",
         "viewHeader": "Tutaj można sprawdzić kolejność elementów",
         "editHeader": "Tutaj można aktualizować pozycje w kolejności",
         "addHeader": "Tutaj można dodawać elementy do wersji roboczej zamówienia",
@@ -102,23 +102,23 @@
         "updateQuantityItemToast": "Pomyślnie zmieniono ilość artykułu w zamówieniu",
         "searchHeader": "Produkt",
         "searchPlaceholder": "Wpisz, aby wyszukać produkty...",
-        "product": "Produkt",
+        "product": "Product",
         "slug": "Ślimak",
         "preview": "Podgląd",
         "id": "Id",
-        "actions": "Działania",
+        "actions": "Actions",
         "noItemsFound": "Nie znaleziono żadnych elementów",
-        "cancel": "Anuluj",
+        "cancel": "Cancel",
         "add": "Dodaj pozycję do zamówienia",
         "update": "Aktualizacja pozycji w zamówieniu",
         "addItem": " Dodaj element",
         "somethingWrong": "Coś poszło nie tak",
         "sku": "SKU",
-        "quantity": "Ilość",
+        "quantity": "Quantity",
         "remove": "Usunąć",
         "edit": "Edytuj",
-        "noItems": "Brak elementów w kolejności roboczej",
-        "price": "Cena",
+        "noItems": "No items in draft order",
+        "price": "Price",
         "priceWithTax": "Cena z podatkiem",
         "totalWithTax": "Razem z podatkiem",
         "customFields": "Pola niestandardowe",
@@ -127,32 +127,37 @@
         "modifyOrder": "Modyfikuj zamówienie",
         "cancelOrder": "Anuluj zamówienie",
         "realizeOrder": "Zrealizuj zamówienie",
-        "areYouSure": "Jesteś pewien?",
+        "areYouSure": "Are you sure?",
         "continue": "Kontynuuj",
         "cancelOrderMessage": "Po anulowaniu zamówienia żadne działanie nie będzie dozwolone",
+        "discounts": {
+            "title": "Rabaty",
+            "description": "Rabaty na zamówienia",
+            "emptyState": "Nie zastosowano żadnych rabatów"
+        },
         "selectCustomer": {
             "titleLabel": "Tytuł*",
             "firstNameLabel": "Imię*",
-            "lastNameLabel": "Nazwisko",
+            "lastNameLabel": "Last Name",
             "emailLabel": "E-mail*",
             "phoneNumberLabel": "Numer telefonu*",
             "select": "Klient",
             "selectButton": "Wybierz klienta",
             "change": "Zmień klienta",
             "create": "Utwórz klienta",
-            "customer": "Klient",
+            "customer": "Customer",
             "label": "Wybór klienta dla tego zamówienia",
             "description": "Wybierz klienta z poniższej listy lub utwórz nowego",
-            "selectTab": "Wybierz klienta",
+            "selectTab": "Select Customer",
             "createTab": "Utwórz nowego klienta",
             "selectedCustomerText": " Wybrany klient:  ",
             "close": "Zamknij",
             "placeholder": "Wpisz, aby wyszukać klientów...",
             "emptyState": "Nie znaleziono klientów",
-            "firstName": "Imię",
-            "lastName": "Nazwisko",
+            "firstName": "First Name",
+            "lastName": "Last Name",
             "email": "E-mail",
-            "phoneNumber": "Numer telefonu",
+            "phoneNumber": "Phone Number",
             "id": "Id",
             "inputLabel": "Aby znaleźć konkretnego klienta, użyj poniższych danych wejściowych i wybierz żądany z poniższej listy",
             "selectCustomerFailed": "Nie udało się wybrać klienta",
@@ -193,13 +198,13 @@
         "selectAddress": "Wybierz adres",
         "createAddress": "Utwórz adres",
         "editAddress": "Edytuj adres",
-        "addressSuccessCreateToast": "Adres został wybrany pomyślnie",
-        "addressSuccessSelectToast": "Adres utworzony pomyślnie",
+        "addressSuccessCreateToast": "Adres utworzony pomyślnie",
+        "addressSuccessSelectToast": "Adres został wybrany pomyślnie",
         "addressFailedCreateToast": "Wybór adresu nie powiódł się",
         "addressFailedSelectToast": "Tworzenie adresu nie powiodło się",
         "newAddress": "Nowy adres: {{address}} dodany do konta użytkownika",
         "addressAddFailed": "Nie udało się dodać nowego adresu do konta użytkownika",
-        "phoneError": "Nieprawidłowy format numeru telefonu",
+        "phoneError": "Invalid phone number format",
         "close": "Close",
         "setAsDefaultShipping": "Ustaw jako domyślny adres wysyłki",
         "setAsDefaultBilling": "Ustaw jako domyślny adres rozliczeniowy",
@@ -208,24 +213,24 @@
         "isDefaultBilling": "Domyślny adres wysyłki klienta",
         "isDefaultShipping": "Domyślny adres rozliczeniowy klienta",
         "createForCustomer": "Utwórz dla klienta",
-        "inputNameLabel": "Pełna nazwa",
-        "inputNamePlaceholder": "Imię i nazwisko",
+        "inputNameLabel": "Full Name",
+        "inputNamePlaceholder": "Full Name",
         "inputCompanyLabel": "Nazwa firmy",
-        "inputCompanyPlaceholder": "Nazwa firmy",
-        "inputPhoneLabel": "Numer telefonu",
-        "inputPhonePlaceholder": "Numer telefonu",
-        "inputPostalLabel": "Kod pocztowy",
-        "inputPostalPlaceholder": "Kod pocztowy",
-        "inputProvinceLabel": "Prowincja",
-        "inputProvincePlaceholder": "Prowincja",
-        "inputCityLabel": "Miasto",
-        "inputCityPlaceholder": "Miasto",
-        "inputStreetLabel": "Ulica Linia 1",
+        "inputCompanyPlaceholder": "Company Name",
+        "inputPhoneLabel": "Phone Number",
+        "inputPhonePlaceholder": "Phone Number",
+        "inputPostalLabel": "Postal Code",
+        "inputPostalPlaceholder": "Postal Code",
+        "inputProvinceLabel": "Province",
+        "inputProvincePlaceholder": "Province",
+        "inputCityLabel": "City",
+        "inputCityPlaceholder": "City",
+        "inputStreetLabel": "Street Line 1",
         "inputStreetPlaceholder": "Street Line 1",
-        "inputStreet2Label": "Ulica Linia 2",
+        "inputStreet2Label": "Street Line 2",
         "inputStreet2Placeholder": "Street Line 2",
         "inputTaxLabel": "Identyfikator podatkowy firmy",
-        "inputTaxPlaceholder": "Identyfikator podatkowy firmy"
+        "inputTaxPlaceholder": "Company Tax ID"
     },
     "selectShipmentMethod": {
         "noLines": "Wymagana jest co najmniej jedna pozycja",
@@ -235,9 +240,9 @@
         "noSelectedTip": "Przed wybraniem metody wysyłki należy dodać produkty.",
         "buttonLabel": "Ustaw metodę wysyłki",
         "close": "Close",
-        "save": "Zapisz",
-        "setMethodTitle": "Ustaw metodę wysyłki",
-        "setMethodDescription": "Wybierz metodę wysyłki",
+        "save": "Zapisywanie",
+        "setMethodTitle": "Set shipping method",
+        "setMethodDescription": "Select a shipping method",
         "shippingAdded": "Metoda wysyłki została dodana pomyślnie"
     },
     "inputs": {
@@ -245,14 +250,22 @@
     },
     "fulfillment": {
         "completeOrderButton": "Kompletne zamówienie",
-        "completeDialogTitle": "Kompletne zamówienie",
+        "completeDialogTitle": "Complete order",
         "completeDialogDescription": "Wypełnij szczegóły realizacji",
-        "product": "Produkt",
+        "product": "Product",
         "sku": "SKU",
         "fulfilled": "Zrealizowano",
-        "onStockValue": "w magazynie {{value}",
+        "onStockValue": "w magazynie {{value}}",
         "emptyState": "No items in draft order",
-        "fulfill": "Fulfill"
+        "fulfill": "Fulfill",
+        "handlers": {
+            "manual-fulfillment": {
+                "title": "Realizacja ręczna",
+                "description": "Ręczne wprowadzanie szczegółów realizacji",
+                "method": "Metoda",
+                "trackingCode": "Kod śledzenia"
+            }
+        }
     },
     "fullName": "Full Name",
     "company": "Company",
@@ -276,12 +289,13 @@
         "description": " W tym miejscu można wyświetlić wszystkie możliwe stany zamówienia oraz bieżący stan zamówienia."
     },
     "fulfillments": {
-        "title": "Realizacja",
-        "method": "Metoda",
-        "state": "Stan",
-        "trackingCode": "Kod śledzenia",
-        "actions": "Działania",
-        "markAsDelivered": " Oznacz jako dostarczone"
+        "title": "Realization",
+        "method": "Method",
+        "state": "State",
+        "trackingCode": "Tracking code",
+        "actions": "Actions",
+        "markAsDelivered": " Oznacz jako dostarczone",
+        "cancel": "Cancel"
     },
     "taxSummary": {
         "title": "Podsumowanie podatkowe",
@@ -297,26 +311,27 @@
         "subTitle": "Płatności powiązane z tym zamówieniem",
         "id": "id",
         "status": "Status",
-        "method": "Metoda",
+        "method": "Method",
         "created": "Utworzony",
+        "cancel": "Cancel",
         "amount": "Kwota",
         "extra": "Dodatkowa",
-        "actions": "Działania",
+        "actions": "Actions",
         "settle": {
             "settle": "Ugoda",
             "title": "Rozlicz płatność",
             "description": "Czy na pewno chcesz rozliczyć tę płatność?",
             "confirm": "Potwierdź",
-            "cancel": "Anuluj"
+            "cancel": "Cancel"
         },
         "notFound": "Nie znaleziono płatności dla tego zamówienia"
     },
     "topActions": {
         "manualChangeStatus": "Zmień status ręcznie",
         "fillAll": "Wypełnij wszystkie wymagane pola",
-        "errMsg": "Coś poszło nie tak",
+        "errMsg": "Something went wrong",
         "fulfillmentAdded": "Realizacja została pomyślnie dodana",
-        "orderCanceledSuccessfully": "Zamówienie anulowane pomyślnie",
+        "orderCanceledSuccessfully": "Order canceled successfully",
         "draftDeletedSuccessfully": "Projekt zamówienia został pomyślnie usunięty",
         "orderCancelError": "Coś poszło nie tak podczas anulowania zamówienia: {{value}}",
         "draftDeleteError": "Coś poszło nie tak podczas usuwania wersji roboczej zamówienia: {{value}}"
@@ -329,11 +344,11 @@
         "addCommentButton": "Dodaj komentarz",
         "isPrivate": "Uwaga jest prywatna",
         "isPrivateDescription": "(opcjonalnie)",
-        "cancel": "Anuluj",
-        "addComment": "Dodaj komentarz",
+        "cancel": "Cancel",
+        "addComment": "Add comment",
         "toAdmins": "Widoczne tylko dla administratorów",
         "toAdminsAndCustomer": "Widoczny dla administratorów i klientów",
-        "sure": "Czy na pewno?",
+        "sure": "Are you sure?",
         "sureDescription": "Usuniętej notatki nie można przywrócić",
         "delete": "Usuń",
         "edit": "Edit",
@@ -387,15 +402,15 @@
     "modify": {
         "title": "Modyfikowanie zamówienia o Id:{{value}}",
         "productTable": {
-            "headImage": "Obraz",
+            "headImage": "Image",
             "headName": "Nazwa produktu",
             "headSku": "SKU",
             "headUnitPrice": "Cena jednostkowa",
-            "headQuantity": "Ilość",
+            "headQuantity": "Quantity",
             "headTotal": "Razem"
         },
-        "addItemTitle": "Dodaj produkt",
-        "quantity": "Ilość"
+        "addItemTitle": "Add Product",
+        "quantity": "Quantity"
     },
     "custom": {
         "selectAttributes": "Wybierz atrybuty",
@@ -408,9 +423,16 @@
         "customPlaceholder": "Wartość",
         "addCustomKey": "Dodaj atrybut niestandardowy",
         "customKey": "Klucz",
-        "customValue": "Wartość",
+        "customValue": "Value",
         "hint": "Wszystkie niestandardowe klucze i wartości muszą być zdefiniowane",
         "customAdditional": "Dodatkowe atrybuty niestandardowe: {{value}}"
+    },
+    "couponCodes": {
+        "title": "Kody",
+        "description": "Ustawianie kodów kuponów",
+        "placeholder": "Wpisz, aby wyszukać",
+        "addToastSuccess": "Kupon został zastosowany pomyślnie",
+        "removeToastSuccess": "Kupon został pomyślnie usunięty"
     },
     "invoice": {
         "createProformaSuccess": "Proforma została wygenerowana",
@@ -426,7 +448,7 @@
     "changeStatus": {
         "header": "Zmień status zamówienia z",
         "description": "Wybierz nowy status zamówienia, który chcesz ustawić dla zamówienia.",
-        "button": "Potwierdź",
+        "button": "Confirm",
         "planned": "Data planowanej realizacji",
         "deadline": "Termin realizacji",
         "color": "Wybierz kolor",
@@ -435,7 +457,7 @@
         "deadlineError": "Wymagany termin realizacji",
         "colorError": "Kolor jest wymagany",
         "charLeft": "Maksymalnie {{value}} znaków. pozostało {{value}} znaków",
-        "datePlaceholder": "Wybierz datę",
+        "datePlaceholder": "Pick a date",
         "changeStatusFailed": "Zmiana statusu nie powiodła się",
         "changeStatusFailedMsg": "Zmiana statusu nie powiodła się {{value}}",
         "selectImages": "Zdjęcia dla karty"
@@ -456,8 +478,8 @@
             "attributes": "",
             "undefined": ""
         },
-        "cancel": "Anuluj",
-        "save": "Zapisz",
+        "cancel": "Cancel",
+        "save": "Save",
         "change": "Zmiana",
         "quantityChange": "Zmiana ilości",
         "actualQuantity": "Ilość rzeczywista",
@@ -470,24 +492,24 @@
         "changeQuantity": "Wprowadź nową ilość"
     },
     "changes": {
-        "cancel": "Anuluj",
-        "save": "Zapisz",
+        "cancel": "Cancel",
+        "save": "Save",
         "addNewAttribute": "Dodaj nowy atrybut",
         "mainChanges": "Główne zmiany",
         "attributesChanges": "Zmiany atrybutów",
         "newAddedLines": "Nowe dodane linie zamówień",
         "change": "Zmiana",
-        "key": "Klucz",
-        "value": "Wartość",
+        "key": "Key",
+        "value": "Value",
         "variant": "Wariant",
         "keys": {
-            "quantity": "Ilość",
-            "price": "Cena",
-            "priceWithTax": "Cena z podatkiem",
+            "quantity": "Quantity",
+            "price": "Price",
+            "priceWithTax": "Price with tax",
             "overallPriceWithTax": "Łącznie z podatkiem",
             "sku": "SKU",
-            "attributes": "Atrybuty",
-            "taxRate": "Stawka podatku",
+            "attributes": "Attributes",
+            "taxRate": "Tax rate",
             "attributeAdded": "Dodany atrybut",
             "attributeRemoved": "Atrybut usunięty"
         }
